<resources>


    <!-- Home -->
    <string name="txt_filter_popular">Mas Populares</string>
    <string name="txt_filter_rating">Mejor calificadas</string>
    <string name="txt_filter_recommendations">Recomendadas</string>

    <string name="txt_movie_detail">Ver Detalle</string>
    <string name="txt_movie_add">Mi lista</string>
    <string name="txt_title_movie">%1$s …</string>


    <string name="app_name">moviedb</string>
    <string name="txt_open">open file</string>

    <!-- Maps -->
    <string name="txt_device_id">Device ID</string>
    <string name="txt_last_update">Ultima conexion</string>


    <!-- Menu Options -->

    <string name="txt_menu_home">Inicio</string>
    <string name="txt_menu_maps">Mapas</string>
    <string name="txt_menu_upload">Cargar</string>
    <string name="txt_menu_profile">Perfil</string>
    <string name="title_activity_maps">MapsActivity</string>

    <!-- Notifications -->

    <string name="notification_title_new_position_saved">Locacion Actualizada</string>
    <string name="notification_description_new_position_saved">Ubicacion del usuario registrada en FireStore</string>
    <string name="notification_description_new_position_saved_without_permits">No podemos mostrar una notificacion sin embargo la ubicacion del usuario ha sido registrada en FireStore</string>

    <!-- Review -->

    <string name="reviews_title">Top Reviews</string>
    <string name="reviews_btn_upload">Enviar Review</string>
    <string name="reviews_btn_clear">Borrar Datos</string>
    <string name="reviews_edt_hint">Puedes dejar aqui tu review, que te parecion la pelicula?, cual fue tu momento favorito?</string>

    <!-- Dialogs -->

    <string name="txt_image_permission">Necesitamos estos permisos para poder acceder a la galeria de imagenes</string>
    <string name="txt_location_unknown">No podemos localizarte</string>
    <string name="txt_dialog_tag">Dialog</string>
    <string name="txt_error">Ha ocurrido un problema</string>
    <string name="txt_insufficient_data">No hay datos suficientes</string>
    <string name="txt_atention">Atencion</string>
    <string name="txt_review_success">Review enviado exitosamente</string>
    <string name="txt_review_failed">Problemas al enviar el review</string>
    <string name="txt_get_review_failed">Problemas al cargar la data</string>
    <string name="txt_missing_data">Todos los campos son requeridos</string>
    <string name="txt_error_gps_description">El GPS del dispositivo se encuentra apagado</string>
    <string name="txt_error_user_positions">No podemos accedder a la lista de usuarios</string>
    <string name="ok_btn">OK</string>
    <string name="txt_location_permissions_denied">Permisos de ubicacion no fueron activados</string>
    <string name="txt_no_granted_notification_permissions">Permisos para enviar notificaciones no fueron aceptados</string>


    <!-- Errors -->

    <string name="txt_btn_try_again">Intentar de nuevo</string>
    <string name="txt_title_network_error">ups…\n no hay conexion a internet</string>
    <string name="txt_description_network_error">Asegurate de que el wifi o los datos moviles esten encendidos</string>
</resources>