<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linearLayoutCompat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:gravity="bottom"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/_16sdp"
        android:paddingTop="@dimen/_8sdp"
        android:weightSum="4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/lnItemHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_10sdp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imgHome"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:padding="@dimen/_3sdp"
                android:src="@drawable/ic_home"
                app:tint="@color/gray" />

            <TextView
                android:id="@+id/tvItemHome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_menu_home"
                android:textColor="@color/gray" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lnItemMaps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_10sdp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintStart_toEndOf="@+id/lnItemHome"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imgMaps"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:src="@drawable/ic_maps"
                app:tint="@color/gray" />

            <TextView
                android:id="@+id/tvItemMaps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_menu_maps"
                android:textColor="@color/gray" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lnItemUpload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_10sdp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintStart_toEndOf="@+id/lnItemCredito"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imgUpload"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:src="@drawable/ic_upload"
                app:tint="@color/gray" />

            <TextView
                android:id="@+id/tvItemUpload"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_menu_upload"
                android:textColor="@color/gray" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/lnItemProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_10sdp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintEnd_toStartOf="@+id/lnItemPerfil"
            app:layout_constraintStart_toEndOf="@+id/lnItemQR"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imgProfile"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:src="@drawable/ic_user"
                app:tint="@color/gray" />

            <TextView
                android:id="@+id/tvItemProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_menu_profile"
                android:textColor="@color/gray" />

        </LinearLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>
