<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:elevation="0dp"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white">

            <ImageView
                android:id="@+id/imgUpload"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_100sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:scaleType="fitXY"
                android:src="@drawable/ic_image_attach"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:scaleType="fitXY"
                android:src="@drawable/ic_user"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imgUpload" />

            <RatingBar
                android:id="@+id/ratingBar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:numStars="5"
                android:stepSize="1"
                android:rating="5"
                android:theme="@style/RatingBar"
                app:layout_constraintBottom_toBottomOf="@+id/imageView"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                app:layout_constraintTop_toTopOf="@+id/imageView" />

            <EditText
                android:id="@+id/edtReview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:hint="@string/reviews_edt_hint"
                android:maxLines="6"
                android:scrollbars="vertical"
                android:textColor="@color/gray_light"
                android:textColorHint="@color/gray_light"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ratingBar" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSendReview"
                style="@style/PositiveBtn"
                android:layout_marginHorizontal="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_12sdp"
                android:lineSpacingExtra="@dimen/_1sdp"
                android:text="@string/reviews_btn_upload"
                android:textSize="@dimen/_12sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/guidelineMid"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edtReview" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnClear"
                style="@style/NegativeBtn"
                android:layout_marginHorizontal="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_12sdp"
                android:lineSpacingExtra="@dimen/_1sdp"
                android:text="@string/reviews_btn_clear"
                android:textSize="@dimen/_12sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guidelineMid"
                app:layout_constraintTop_toBottomOf="@+id/edtReview" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineMid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>